--- a/src/TronBackground.css
+++ b/src/TronBackground.css
@@ -21,12 +21,13 @@ body {
   width: 100%;
   height: 100%;
   background-image: url('/tron_stock.png');
-  background-repeat: repeat;
-  opacity: 0.5;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* opacity: 0.5; */
   z-index: -1;
 }
 
-.tron-light {
+/* .tron-light {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -36,9 +37,9 @@ body {
   border-radius: 50%;
   box-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 80px #fff;
   animation: tron-light 2s infinite linear;
-}
+} */
 
-@keyframes tron-light {
+/* @keyframes tron-light {
   0% {
     box-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 80px #fff;
   }
@@ -46,4 +47,4 @@ body {
   100% {
     box-shadow: 0 0 20px #fff, 0 0 40px #fff, 0 0 60px #fff, 0 0 200px #fff;
   }
-}
+} */
