--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 #root {
     overflow: hidden;
 }
+
+a {
+    text-decoration: none;
+    color: #dc73ff !important
+}
+
+a:hover {
+    text-decoration: none;
+    filter: brightness(90%) saturate(80%);
+}
